tests/paczka1/small_fuzzy/18562564.err
Error in line 6: nBp2F3IgOh S474 98,0
Error in line 4: qDhkxcY A173 61,7
Error in line 10: A253 A620 60,4
